adds support for windows in documentation

--- a/site/docs/ssi/create-did.mdx
+++ b/site/docs/ssi/create-did.mdx
@@ -4,6 +4,8 @@ title: Create a DID
 hide_title: true
 ---
 
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
+
 # Create a Decentralized Identifier (DID)
 
 In the world of SSI, [DIDs](/docs/web5/learn/decentralized-identifiers) are used to identify any subject (e.g., a person, organization, thing, data model, abstract entity, etc.). In this tutorial we'll show you how to create a DID using the [SSI Service](https://github.com/TBD54566975/ssi-service). 
@@ -18,9 +20,7 @@ Follow guide to [Clone & Run SSI Service](run-ssi-service).
 
 To create your DID, run the following request:
 
-```bash
-curl -X PUT localhost:8080/v1/dids/key -d '{"keyType":"Ed25519"}'
-```
+<ReusableTabs />
 
 A [DID document](/docs/glossary#did-document) will be returned, which includes the actual DID string in the `did.id` field:
 
@@ -81,9 +81,7 @@ A [DID document](/docs/glossary#did-document) will be returned, which includes t
 ### DID Methods
 The returned DID `did:key:z6MkjePG6UBCLbrgUQgURoTSuXAbRpDbCdTLEPUXDqUC4EFw` is using `key` as its DID method because that's what we specified in our request:
 
-```bash
-curl -X PUT localhost:8080/v1/dids/key -d '{"keyType":"Ed25519"}'
-```
+<ReusableTabs />
 
 <details>
 <summary>Other supported DID methods</summary>
@@ -92,9 +90,7 @@ SSI Service also supports `ion` and `web` DID methods.
 
 ** Create DID using `ion` DID method:**
 
-```bash
-curl -X PUT localhost:8080/v1/dids/ion -d '{"keyType":"Ed25519"}'
-```
+<ReusableTabs/>
 
 <details>
 <summary>Example Response</summary>
@@ -147,14 +143,19 @@ It relies on the controller of an existing domain to host a custom file with the
 * You are able to host files in a path within that origin (e.g. you can host the file returned by `https://www.example.com/.well-known/did.json`).
 :::
 
-```bash
-curl -X PUT 'localhost:3000/v1/dids/web' -d '{
+<ReusableTabs
+MacCommand={`curl -X PUT 'localhost:3000/v1/dids/web' -d '{
   "keyType": "Ed25519",
   "options": {
     "didWebId": "did:web:example.com"
   }
-}'
-```
+}`}
+WinCommand={`curl -X PUT 'localhost:3000/v1/dids/web' -d "{
+  "keyType": "Ed25519",
+  "options": {
+    "didWebId": "did:web:example.com"
+  }
+}"`}/>
 
 <details>
 <summary>Example Response</summary>
@@ -252,8 +253,6 @@ Learn more about [DID methods](https://www.w3.org/TR/did-spec-registries/#did-me
 ### DID Key Types
 Each DID has one or more keys, and each key has a [type](https://w3c-ccg.github.io/did-method-key/#format). In our request, we specified [Ed25519](https://ed25519.cr.yp.to/) as it is sufficient for generating digital signatures and is known for its high level of security and efficiency:
 
-```bash
-curl -X PUT localhost:8080/v1/dids/key -d '{"keyType":"Ed25519"}'
-```
+<ReusableTabs/>
 
 Some key types give you different properties and can be used for different purposes. Some keys are better for signing, others for encryption. Some are even provided by the government. There are variations on how they're constructed to give different security properties.
