--- a/site/docs/ssi/credential-issuance-service.mdx
+++ b/site/docs/ssi/credential-issuance-service.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 5
 title: Credential Issuance Service
 ---
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
 
 This tutorial walks you through the lifecycle of a verifiable credential (VC) from designing a schema, issuing a credential, presenting the credential, and verifying it. 
 
@@ -15,9 +16,7 @@ This tutorial walks you through the lifecycle of a verifiable credential (VC) fr
 
 Let's create a DID for our issuance service. This will be who the end users end up trusting.
 
-```bash
-curl -X PUT localhost:8080/v1/dids/key -d '{"keyType": "Ed25519"}'
-```
+<ReusableTabs/>
 
 This gives the issuance service a DID to shout to the world, tell all your friends about it. The service keeps the private key that controls the DID in its own secure storage, so you never directly access it.
 
@@ -93,6 +92,10 @@ You can return the list of DIDs at any time via the `http://localhost:8080/v1/di
 
 Next, we'll create a schema for the credential we want to issue from our service:
 
+
+
+
+
 ```bash
 curl -X PUT localhost:8080/v1/schemas -d '{
   "name": "Person Credential",
@@ -159,35 +162,50 @@ From the response, take note of the credential id for the next step.
 
 To issue a credential, enter the **issuer's DID**, **verification method ID**, and **schema ID** obtained from the previous responses into the request below. Also for the **subject**, enter the DID of who you'd like to issue the credential to:
 
-```json
-curl -X PUT localhost:8080/v1/credentials -d '{
-  //Issuer's DID
-  //highlight-next-line
-  "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o", 
+<ReusableTabs
+  MacCommand={`curl -X PUT localhost:8080/v1/credentials -d '{
+    // Issuer's DID
+    "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
   
-  //Verification method ID from issuer's DID document
-  //highlight-next-line
-  "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
- 
-  //DID to issue credential to:
-  //highlight-next-line
-  "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
+    // Verification method ID from issuer's DID document
+    "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
   
-  //Credential Schema ID
-  //highlight-next-line
-  "schemaId": "0bee9256-dab1-40c6-b6c7-6a6e0164c0c5",
+    // DID to issue credential to
+    "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
   
-  "data": {
-    "firstName": "Satoshi",
-    "lastName": "Nakamoto"
-  }
-}'
-```
+    // Credential Schema ID
+    "schemaId": "0bee9256-dab1-40c6-b6c7-6a6e0164c0c5",
+  
+    "data": {
+      "firstName": "Satoshi",
+      "lastName": "Nakamoto"
+    }
+  }'`}
+  WinCommand={`curl -X PUT localhost:8080/v1/credentials -d "{
+    // Issuer's DID
+    "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
+  
+    // Verification method ID from issuer's DID document
+    "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
+  
+    // DID to issue credential to
+    "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
+  
+    // Credential Schema ID
+    "schemaId": "0bee9256-dab1-40c6-b6c7-6a6e0164c0c5",
+  
+    "data": {
+      "firstName": "Satoshi",
+      "lastName": "Nakamoto"
+    }
+  }"`}
+/>
 
 After filling in all info, run your snippet, which should resemble this:
 
-```bash
-curl -X PUT localhost:8080/v1/credentials -d '{
+
+<ReusableTabs
+MacCommand={`curl -X PUT localhost:8080/v1/credentials -d '{
   "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o", 
   "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
   "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
@@ -196,8 +214,20 @@ curl -X PUT localhost:8080/v1/credentials -d '{
     "firstName": "Satoshi",
     "lastName": "Nakamoto"
   }
-}'
-```
+}'`}
+WinCommand={`
+curl -X PUT localhost:8080/v1/credentials -d "{
+  "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o", 
+  "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
+  "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
+  "schemaId": "0bee9256-dab1-40c6-b6c7-6a6e0164c0c5",
+  "data": {
+    "firstName": "Satoshi",
+    "lastName": "Nakamoto"
+  }
+}"`}
+/>
+
 
 You then get a response with a bunch of data, but  `credentialJwt` is the actual credential, so take note of that blob of text.
 
@@ -296,8 +326,8 @@ This will be a web app which takes a user's DID and name, and then returns a VC 
 
 MoeX has 2 items in its credit credential: Credit Score (required) and Number of Defaults (optional). So, let's create a schema for this:
 
-```bash
-curl -X PUT localhost:8080/v1/schemas -d '{
+<ReusableTabs
+MacCommand={`curl -X PUT localhost:8080/v1/schemas -d '{
   "name": "Credit Score Credential",
   "schema": {
     "$schema": "https://json-schema.org/draft/2020-12/schema",
@@ -317,8 +347,28 @@ curl -X PUT localhost:8080/v1/schemas -d '{
       }
     }
   }
-}'
-```
+}'`}
+WinCommand={`curl -X PUT localhost:8080/v1/schemas -d "{
+  "name": "Credit Score Credential",
+  "schema": {
+    "$schema": "https://json-schema.org/draft/2020-12/schema",
+    "type": "object",
+    "properties": {
+      "credentialSubject": {
+        "type": "object",
+        "properties": {
+          "creditScore": {
+            "type": "integer"
+         },
+          "numOfDefaults": {
+            "type": "integer"
+         }
+        },
+        "required": ["creditScore"]
+      }
+    }
+  }
+}"`}/>
 
 :::tip
 You can probably make a better schema that doesn't disclose the customer's exact credit score but just a band if you like.
