--- a/site/docs/ssi/credential-manifests.mdx
+++ b/site/docs/ssi/credential-manifests.mdx
@@ -3,6 +3,8 @@ sidebar_position: 10
 title: Credential Manifests
 ---
 
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
+
 # Credential Manifests
 
 ## What is a Credential Manifest?
@@ -155,13 +157,19 @@ curl -X GET localhost:8080/v1/manifests
 
 To obtain a list all Manifests associated with a specific Issuer, pass in the Issuer's DID as the `id`:
 
-```bash
-curl -X GET localhost:8080/v1/manifests -d '{
+<ReusableTabs
+MacCommand={`curl -X GET localhost:8080/v1/manifests -d '{
   "issuer": {
     "id": "did:key:z6MkkZDjunoN4gyPMx5TSy7Mfzw22D2RZQZUcx46bii53Ex3"
   }
-}'
-```
+}'`}
+WinCommand={`curl -X GET localhost:8080/v1/manifests -d "{
+  "issuer": {
+    "id": "did:key:z6MkkZDjunoN4gyPMx5TSy7Mfzw22D2RZQZUcx46bii53Ex3"
+  }
+}"`} />
+
+
 
 
 ### Get a Credential Manifest
