--- a/site/docs/ssi/presentation-requests.mdx
+++ b/site/docs/ssi/presentation-requests.mdx
@@ -3,6 +3,9 @@ sidebar_position: 11
 title: Presentation Requests
 ---
 
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
+
+
 A [Presentation Request](https://identity.foundation/presentation-exchange/spec/v2.0.0/#presentation-request) is essentially a message that a Verifier sends to a Holder, asking for certain credentials or information. Think of it like a checklist, formally known as a [Presentation Definition](https://identity.foundation/presentation-exchange/spec/v2.0.0/#presentation-definition), which outlines what the Verifier needs to know. It specifies the "claims" or credentials that the Holder needs to provide, offering them various options to meet these criteria. In some scenarios, this request may also be digitally signed for added security and might include special features to prevent replay attacks.
 
 To illustrate, imagine Alice wants to rent a car from Acme Car Rentals. Alice, acting as the Holder, has a driver's license in a digital wallet. Acme, being the Verifier, sends a Presentation Request to Alice's wallet to check if she has a valid driver's license. This is essentially Acme's way of asking Alice's wallet to show her driver's license VC for verification.
@@ -53,13 +56,18 @@ At this point, Acme's system receives a notification indicating that Alice's wal
 
 Acme initiates a `PUT` request to `v1/presentations/requests` to ask for Alice's credentials:
 
-```bash
-curl -X PUT localhost:8080/v1/presentations/requests -d '{
+<ReusableTabs
+MacCommand={`curl -X PUT localhost:8080/v1/presentations/requests -d '{
  "issuerId": "did:key:z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM",
  "presentationDefinitionId": "24ae411e-e3ca-4217-b055-5fb306b2bb5c",
  "verificationMethodId": "did:key:z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM#z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM"
-}'
-```
+}'`}
+WinCommand={`curl -X PUT localhost:8080/v1/presentations/requests -d "{
+ "issuerId": "did:key:z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM",
+ "presentationDefinitionId": "24ae411e-e3ca-4217-b055-5fb306b2bb5c",
+ "verificationMethodId": "did:key:z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM#z6MkirxnoyzmKW36bGwZCZoHSofBZTfSStpUdrQdesfnithM"
+}"`}
+/>
 
 The Presentation Request is generated and sent back to Alice's wallet:
 
