--- a/site/docs/ssi/revoke-credentials.mdx
+++ b/site/docs/ssi/revoke-credentials.mdx
@@ -3,6 +3,7 @@ sidebar_position: 7
 title: Revoke Credentials
 hide_title: true
 ---
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
 
 # Revoke a Credential
 
@@ -22,9 +23,9 @@ To do so, make a `PUT` request to `/v1/credentials/{id}/status` and specify a bo
 
 Given a credential was created with `revocable` as true, you can revoke that credential by setting `revoked` to true:
 
-```bash
-curl -X PUT localhost:8080/v1/credentials/8f9d58b2-c978-4317-96bd-35949ce76121/status -d '{ "revoked": true }'
-```
+<ReusableTabs
+MacCommand={`curl -X PUT localhost:8080/v1/credentials/8f9d58b2-c978-4317-96bd-35949ce76121/status -d '{ "revoked": true }'`}
+WinCommand={`curl -X PUT localhost:8080/v1/credentials/8f9d58b2-c978-4317-96bd-35949ce76121/status -d "{ "revoked": true }"`}/>
 
 Upon success, you'll see the following response:
 
