--- a/site/docs/ssi/verify-credentials.mdx
+++ b/site/docs/ssi/verify-credentials.mdx
@@ -4,6 +4,8 @@ title: Verify Credentials
 hide_title: true
 ---
 
+import ReusableTabs from '../../src/components/ReusableTabs.jsx';
+
 # Verify a Credential
 
 There are numerous factors to determine a credential's validity. Verifiers will ultimately define their own unique criteria for determining validity from a range of possibilities:
@@ -33,11 +35,13 @@ As a part of SSI Service, `/v1/credentials/verification` is used as a stateless 
 
 To verify a VC, run the follow command after replacing the credentialJWT value with the one from the credential you're validating:
 
-```bash
-curl -X PUT localhost:8080/v1/credentials/verification -d '{
+<ReusableTabs 
+MacCommand={`curl -X PUT localhost:8080/v1/credentials/verification -d '{
     "credentialJwt": "eyJhbGciOiJFZERTQSIsImtpZCI6ImRpZDprZXk6..."
-}'
-```
+}'`}
+WinCommand={`curl -X PUT localhost:8080/v1/credentials/verification -d "{
+    "credentialJwt": "eyJhbGciOiJFZERTQSIsImtpZCI6ImRpZDprZXk6..."
+}"`}/>
 
 Upon success the following response should be returned:
 
