--- a/site/docs/ssi/credential-issuance-service.mdx
+++ b/site/docs/ssi/credential-issuance-service.mdx
@@ -92,12 +92,8 @@ You can return the list of DIDs at any time via the `http://localhost:8080/v1/di
 
 Next, we'll create a schema for the credential we want to issue from our service:
 
-
-
-
-
-```bash
-curl -X PUT localhost:8080/v1/schemas -d '{
+<ReusableTabs
+MacCommand={`curl -X PUT localhost:8080/v1/schemas -d '{
   "name": "Person Credential",
   "schema": {
     "$schema": "https://json-schema.org/draft/2020-12/schema",
@@ -117,8 +113,28 @@ curl -X PUT localhost:8080/v1/schemas -d '{
       }
     }
   }
-}'
-```
+}'`}
+WinCommand={`curl -X PUT localhost:8080/v1/schemas -d "{
+  "name": "Person Credential",
+  "schema": {
+    "$schema": "https://json-schema.org/draft/2020-12/schema",
+    "type": "object",
+    "properties": {
+      "credentialSubject": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+         },
+          "lastName": {
+            "type": "string"
+         }
+        },
+        "required": ["firstName", "lastName"]
+      }
+    }
+  }
+}"`}/>
 
 From the response, take note of the credential id for the next step.
 
