added tbdex docs to project page

--- a/site/src/content/projects/tbdex/heading.mdx
+++ b/site/src/content/projects/tbdex/heading.mdx
@@ -18,8 +18,8 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to <Tooltip
     {
       type: 'button',
       data: {
-        label: '📃 tbDEX Whitepaper',
-        url: 'https://tbdex.io/whitepaper.pdf',
+        label: '📃 Docs',
+        url: '/docs/tbdex/',
       },
     },
     {
@@ -40,5 +40,12 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to <Tooltip
         imageURL: '/img/discord-icon.svg',
       },
     },
+    {
+      type: 'button',
+      data: {
+        label: '📜 Whitepaper',
+        url: 'https://tbdex.io/whitepaper.pdf',
+      },
+    }    
   ]}
 />
