--- a/site/api/web5-js/dwn/record.mdx
+++ b/site/api/web5-js/dwn/record.mdx
@@ -133,7 +133,7 @@ The status of the request
 
 #### Code Example
 
-<CodeSnippet functionName="updateRecord" />
+<CodeSnippet functionName="deleteRecord" />
 
 <Divider type="slash"/>
 
