changing function name for uniqueness

--- a/site/api/web5-js/dwn/record.mdx
+++ b/site/api/web5-js/dwn/record.mdx
@@ -108,7 +108,7 @@ The status of the request
 
 #### Code Example
 
-<CodeSnippet functionName="createRecord" />
+<CodeSnippet functionName="createRecordHelloWorld" />
 
 <Divider type="slash"/>
 
