--- a/site/api/web5-js/dwn/record.mdx
+++ b/site/api/web5-js/dwn/record.mdx
@@ -107,7 +107,7 @@ The status of the request
 
 #### Code Example
 
-<CodeSnippet functionName="createRecordHelloWorld" />
+<CodeSnippet functionName="createRecordWithHighlight" />
 
 <Divider type="slash"/>
 
