removed defaults, and code block working

--- a/site/docs/ssi/create-credentials.mdx
+++ b/site/docs/ssi/create-credentials.mdx
@@ -122,7 +122,10 @@ did:key:z6MkqcFHFXqzsYyDYrEUA2pVCfQGJz2rYoCZy5WWszzSW3o6
 
 However, if you'd prefer to create a new DID for Alice, run:
 
-<ReusableTabs/>
+<ReusableTabs
+MacCommand = {`curl -X PUT -d '{"keyType":"Ed25519"}' localhost:8080/v1/dids/key`}
+WinCommand = {`curl -X PUT -d "{"keyType":"Ed25519"}" localhost:8080/v1/dids/key`}
+ />
 
 **c. Create a Credential Schema**
 
