--- a/site/docs/ssi/create-did.mdx
+++ b/site/docs/ssi/create-did.mdx
@@ -20,7 +20,10 @@ Follow guide to [Clone & Run SSI Service](run-ssi-service).
 
 To create your DID, run the following request:
 
-<ReusableTabs />
+<ReusableTabs
+MacCommand = {`curl -X PUT -d '{"keyType":"Ed25519"}' localhost:8080/v1/dids/key`}
+WinCommand = {`curl -X PUT -d "{"keyType":"Ed25519"}" localhost:8080/v1/dids/key`}
+ />
 
 A [DID document](/docs/glossary#did-document) will be returned, which includes the actual DID string in the `did.id` field:
 
@@ -81,7 +84,10 @@ A [DID document](/docs/glossary#did-document) will be returned, which includes t
 ### DID Methods
 The returned DID `did:key:z6MkjePG6UBCLbrgUQgURoTSuXAbRpDbCdTLEPUXDqUC4EFw` is using `key` as its DID method because that's what we specified in our request:
 
-<ReusableTabs />
+<ReusableTabs
+MacCommand = {`curl -X PUT -d '{"keyType":"Ed25519"}' localhost:8080/v1/dids/key`}
+WinCommand = {`curl -X PUT -d "{"keyType":"Ed25519"}" localhost:8080/v1/dids/key`}
+ />
 
 <details>
 <summary>Other supported DID methods</summary>
@@ -90,7 +96,10 @@ SSI Service also supports `ion` and `web` DID methods.
 
 ** Create DID using `ion` DID method:**
 
-<ReusableTabs/>
+<ReusableTabs
+MacCommand = {`curl -X PUT localhost:8080/v1/dids/ion -d '{"keyType":"Ed25519"}'`}
+WinCommand = {`curl -X PUT localhost:8080/v1/dids/ion -d "{"keyType":"Ed25519"}"`}
+ />
 
 <details>
 <summary>Example Response</summary>
@@ -253,6 +262,9 @@ Learn more about [DID methods](https://www.w3.org/TR/did-spec-registries/#did-me
 ### DID Key Types
 Each DID has one or more keys, and each key has a [type](https://w3c-ccg.github.io/did-method-key/#format). In our request, we specified [Ed25519](https://ed25519.cr.yp.to/) as it is sufficient for generating digital signatures and is known for its high level of security and efficiency:
 
-<ReusableTabs/>
+<ReusableTabs
+MacCommand = {`curl -X PUT -d '{"keyType":"Ed25519"}' localhost:8080/v1/dids/key`}
+WinCommand = {`curl -X PUT -d "{"keyType":"Ed25519"}" localhost:8080/v1/dids/key`}
+ />
 
 Some key types give you different properties and can be used for different purposes. Some keys are better for signing, others for encryption. Some are even provided by the government. There are variations on how they're constructed to give different security properties.
