restored the package.json file

--- a/site/docs/ssi/credential-issuance-service.mdx
+++ b/site/docs/ssi/credential-issuance-service.mdx
@@ -16,7 +16,9 @@ This tutorial walks you through the lifecycle of a verifiable credential (VC) fr
 
 Let's create a DID for our issuance service. This will be who the end users end up trusting.
 
-<ReusableTabs/>
+<ReusableTabs 
+MacCommand={`curl -X PUT localhost:8080/v1/dids/key -d '{"keyType": "Ed25519"}'`}
+WinCommand={`curl -X PUT localhost:8080/v1/dids/key -d "{"keyType": "Ed25519"}"`}/>
 
 This gives the issuance service a DID to shout to the world, tell all your friends about it. The service keeps the private key that controls the DID in its own secure storage, so you never directly access it.
 
@@ -231,8 +233,7 @@ MacCommand={`curl -X PUT localhost:8080/v1/credentials -d '{
     "lastName": "Nakamoto"
   }
 }'`}
-WinCommand={`
-curl -X PUT localhost:8080/v1/credentials -d "{
+WinCommand={`curl -X PUT localhost:8080/v1/credentials -d "{
   "issuer": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o", 
   "verificationMethodId": "did:key:z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o#z6MkqGF11YyzCgVr6G3dVJULjbBokSXN4J3cjSB5MQdXto4o",
   "subject": "did:ion:EiClkZMDxPKqC9c-umQfTkR8vvZ9JPhl_xLDI9Nfk38w5w",
